--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,31 +9,46 @@
     <script src="https://kit.fontawesome.com/bc7243edf9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <header>
-    <!--Logo-->
+        <!--Logo-->
 
         <div class="container">
-          <div class="logo"> VetCarvalho </div>  
+            <div class="logo"> VetCarvalho </div>
 
-    <!--Menu-->
-        <div class="menu">
-            <nav>
-                <a href="#">HOME</a>
-                <a href="#">SOBRE</a>
-                <a href="#">HORÁRIOS</a>
-                <a href="#">CONTATO</a>
-            </nav>
+            <!--Menu-->
+            <div class="menu">
+                <nav>
+                    <a href="index.html">HOME</a>
+                    <a href="#sobre">SOBRE</a>
+                    <a href="#">HORÁRIOS</a>
+                    <a href="#">CONTATO</a>
+                </nav>
+            </div>
+
+            <!--redes sociais-->
+            <div class="sociais">
+                <button><i class="fa-brands fa-instagram"></i></button>
+                <button><i class="fa-brands fa-twitter"></i></button>
+                <button><i class="fa-brands fa-facebook"></i></button>
+            </div>
         </div>
+    </header>
 
-    <!--redes sociais-->
-        <div class="sociais">
-            <button><i class="fa-brands fa-instagram"></i></button>
-            <button><i class="fa-brands fa-twitter"></i></button>
-            <button><i class="fa-brands fa-facebook"></i></button>
+    <!--Conteúdo do site-->
+    <div class="content">
+        <div class="lista">
+            <ul>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+            </ul>
         </div>
     </div>
-    </header>
+    
 </body>
+
 </html>
