--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <nav>
                     <a href="index.html">HOME</a>
                     <a href="sobre.html">SOBRE</a>
-                    <a href="#horario">HORÁRIOS</a>
+                    <a href="horario.html">HORÁRIOS</a>
                     <a href="#contatos">CONTATO</a>
                 </nav>
             </div>
@@ -92,9 +92,13 @@
     </div>
 
     <br><br>
-        <footer>
+        <footer id="contatos">
             <div class="rodape">
-            Todos os direitos reservados desde 02/08/1998.
+            <ul>
+                <li><p>Telefone:</p> +55 4002-8922</li>
+                <li><p>E-mail:</p> contato.caiocarvalho@live.com</li>
+                <li><p>Celular:</p> (11)9999-9999</li>
+            </ul>
             </div>
         </footer>
 
